--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
 		"bcrypt": "^5.0.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
+		"dotenv": "^16.0.1",
 		"knex": "^2.1.0",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.3.3",
